fix(layout): wrap article tags to prevent overflow

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -94,6 +94,10 @@ article
 
                 .message-body
                     border: none
+        
+        .article-tags
+            display: flex
+            flex-wrap: wrap
 
 .rtl
     direction: rtl
